--- a/aboutMe/style.css
+++ b/aboutMe/style.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-
   font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -14,17 +13,6 @@ body {
   max-width: 100vw;
   background-color: white;
   margin-bottom: 0;
-}
-
-.main_picture {
-  position: relative;
-  height: 100vh;
-  background-image: url("../pictures/myPhoto.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  display: flex;
-  justify-content: center;
 }
 
 .logo {
@@ -152,43 +140,54 @@ body {
   margin-left: 20px;
 }
 
-.text-section {
-  width: 75%;
+.section-about {
+  width: 85%;
   margin: 0 auto;
-  text-align: center;
-}
-
-.about-me {
-  margin-top: 10%;
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  gap: 45px;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  height: fit-content;
 }
-
-.about-me h1 {
-  text-align: right;
+.section-photo {
   display: flex;
-
+  flex-direction: column;
+}
+.my-photo {
+  background-image: url('../pictures/myPhoto.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  height: 80vh;
 }
 
+
+.founder {
+ color: #3a3a39;
+}
+.about-me {
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  height: 80vh;
+}
 .text-about {
-  line-height: 28px;
-  text-align: left;
-  font-size: 24px;
-}
-
-hr {
-  color: #9F9F9D;
-  margin-top: 70px;
+  line-height: 25px;
 }
 
 .footer {
-  padding: 60px 0;
+  width: 85%;
+  margin: 0 auto;
 }
-
+hr {
+  margin-top: 65px;
+}
 .footer-info {
   display: flex;
   justify-content: space-between;
+  padding: 55px 0;
 }
 
 .footer-phone_number {
@@ -196,14 +195,24 @@ hr {
   align-items: center;
 }
 
-
-
 @media screen and (max-width: 1150px) {
   .logo {
     left: 4%;
   }
+  .section-about {
+    grid-template-columns: 1fr;
+    height: auto;
+  }
+  .my-photo {
+   height: 50vh;
+  }
+  .section-about {
+    gap: 0;
+  }
+  .about-me {
+    height: fit-content;
+  }
 }
-
 
 @media screen and (max-width: 768px) {
   .logo {
@@ -241,33 +250,29 @@ hr {
     padding: 5px;
   }
 
-  .project-head {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 5px;
-  }
-
 
   .burger-menu_active .burger-menu_nav {
     width: 100%;
   }
 
-  .about-me {
-    margin-top: 15%;
-    grid-template-columns: 1fr;
-    gap: 0px;
-  }
+.about-me {
+  grid-template-columns: 1fr;
+  gap: 0px;
+}
 
-  .about-me h1 {
-    text-align: left;
-  }
+.about-me h1 {
+  text-align: left;
+}
+
 .text-about {
   font-size: 20px;
 }
-  .footer {
-    padding: 20px 0;
-  }
-
+.footer {
+  padding: 20px 0;
+}
+hr {
+  margin-top: 0;
+}
   .footer-info {
     justify-content: space-between;
     flex-direction: column;
