--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@ a, body {
   text-decoration: none;
 }
 .container {
-
+ 
   background-color: white;
   margin-bottom: 0;
+  overflow: hidden;
+  height: 100vh;
 }
 .logo {
   position: absolute;
@@ -40,11 +42,13 @@ a, body {
 
 .burger-menu_button {
   position: fixed;
-  top: 20px;
-  right: 10px;
+  top: 30px;
+  right: 30px;
   z-index: 30;
   width: 80px;
   height: 80px;
+  background-color: rgb(88,88,82, 0.6);
+  border-radius: 2px;
 }
 
 .burger-menu_lines,
@@ -53,7 +57,7 @@ a, body {
   position: absolute;
   width: 38px;
   height: 4px;
-  background-color: grey;
+  background-color: white;
 }
 
 .burger-menu_lines {
@@ -119,13 +123,16 @@ a, body {
   text-align: right;
   
 }
-.burger-menu .follow-us {
+.burger-menu {
   color: white;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   margin-top: 120px;
   padding: 30px;
+}
+.link {
+  display: block;
 }
 .burger-menu_social-media {
   display: flex;
@@ -136,6 +143,7 @@ a, body {
   width: 22px;
   height: 22px;
   margin-left: 20px;
+  
 }
 
 
@@ -171,7 +179,7 @@ a, body {
       flex-direction: column;
       align-items: center;
   }
-  .burger-menu .follow-us {
+  .burger-menu {
     align-items: center;
   }
   
