--- a/pageReferences/style.css
+++ b/pageReferences/style.css
@@ -53,11 +53,13 @@ body {
 }
 .burger-menu_button {
   position: fixed;
-  top: 20px;
-  right: 10px;
+  top: 30px;
+  right: 30px;
   z-index: 30;
   width: 80px;
   height: 80px;
+  background-color: rgb(88,88,82, 0.6);
+  border-radius: 2px;
 }
 
 .burger-menu_lines,
@@ -66,7 +68,7 @@ body {
   position: absolute;
   width: 38px;
   height: 4px;
-  background-color: grey;
+  background-color: white;
 }
 
 .burger-menu_lines {
