--- a/pageReferences/style.css
+++ b/pageReferences/style.css
@@ -208,7 +208,7 @@ hr {
   }
   
   .burger-menu_nav {
-    padding: 110px 0px 0px 80px;
+    padding: 20px 0px 0px 80px;
     position: fixed;
     z-index: 20;
     display: flex;
@@ -223,9 +223,12 @@ hr {
     flex-direction: column;
     align-items: center;
   }
-
-  .burger-menu .follow-us {
+  .burger-menu_link {
+    font-size: 24px; 
+  }
+  .burger-menu .follow-us{
     align-items: center;
+    margin-top: 30px;
   }
 
   .burger-menu_social-media-link-image {
