--- a/pageContact/style.css
+++ b/pageContact/style.css
@@ -195,7 +195,7 @@ a {
     height: 80px;
   }
   .burger-menu_nav {
-    padding: 110px 0px 0px 80px;
+    padding: 20px 0px 0px 80px;
     position: fixed;
     z-index: 20;
     display: flex;
@@ -210,8 +210,12 @@ a {
     flex-direction: column;
     align-items: center;
   }
-  .burger-menu .follow-us {
+  .burger-menu_link {
+    font-size: 24px; 
+  }
+  .burger-menu .follow-us{
     align-items: center;
+    margin-top: 30px;
   }
   
   .burger-menu_social-media-link-image {
