--- a/pageDidimHotel/style.css
+++ b/pageDidimHotel/style.css
@@ -18,7 +18,7 @@ a {
 .main_picture {
   position: relative;
   height: 90vh;
-  background-image: url("../images/DIDIM_HOTEL/1.JPG");
+  background-image: url("../images/DIDIM_HOTEL/1.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -353,7 +353,7 @@ hr {
   }
 
   .burger-menu_nav {
-    padding: 110px 0px 0px 80px;
+    padding: 20px 0px 0px 80px;
     position: fixed;
     z-index: 20;
     display: flex;
@@ -368,10 +368,13 @@ hr {
     flex-direction: column;
     align-items: center;
   }
-  .burger-menu .follow-us {
-    align-items: center;
+  .burger-menu_link {
+    font-size: 24px; 
   }
-  
+  .burger-menu .follow-us{
+    align-items: center;
+    margin-top: 30px;
+  }
   .burger-menu_social-media-link-image {
     margin-left: 0;
     padding: 5px;
@@ -379,7 +382,6 @@ hr {
   .project-head {
     margin-top: 50px;
   }
-
   .project-name {
     flex-direction: row;
 
