--- a/pageStonebridgeHotel/style.css
+++ b/pageStonebridgeHotel/style.css
@@ -326,7 +326,7 @@ hr {
   }
 
   .burger-menu_nav {
-    padding: 110px 0px 0px 80px;
+    padding: 20px 0px 0px 80px;
     position: fixed;
     z-index: 20;
     display: flex;
@@ -341,10 +341,13 @@ hr {
     flex-direction: column;
     align-items: center;
   }
-  .burger-menu .follow-us {
-    align-items: center;
+  .burger-menu_link {
+    font-size: 24px; 
   }
-  
+  .burger-menu .follow-us{
+    align-items: center;
+    margin-top: 30px;
+  }
   .burger-menu_social-media-link-image {
     margin-left: 0;
     padding: 5px;
