--- a/pageWhyStudioSearch/style.css
+++ b/pageWhyStudioSearch/style.css
@@ -243,7 +243,7 @@ hr {
 @media screen and (max-width: 768px) {
 
   .burger-menu_nav {
-    padding: 110px 0px 0px 80px;
+    padding: 20px 0px 0px 80px;
     position: fixed;
     z-index: 20;
     display: flex;
@@ -258,9 +258,12 @@ hr {
     flex-direction: column;
     align-items: center;
   }
-
-  .burger-menu .follow-us {
+  .burger-menu_link {
+    font-size: 24px; 
+  }
+  .burger-menu .follow-us{
     align-items: center;
+    margin-top: 30px;
   }
 
   .burger-menu_social-media-link-image {
