--- a/projects/project.css
+++ b/projects/project.css
@@ -212,7 +212,7 @@ body {
   
   #index-gallery .img2 {
     grid-area: img2;
-    background-image: url("../images/DIDIM_HOTEL/1.JPG"); 
+    background-image: url("../images/DIDIM_HOTEL/1.jpg"); 
   }
   
   #index-gallery .img3 {
@@ -311,7 +311,7 @@ body {
       height: 70px;
     }
     .burger-menu_nav {
-        padding: 110px 0px 0px 80px;
+        padding: 20px 0px 0px 80px;
         position: fixed;
         z-index: 20;
         display: flex;
@@ -326,8 +326,12 @@ body {
         flex-direction: column;
         align-items: center;
     }
-    .burger-menu .follow-us {
+    .burger-menu_link {
+      font-size: 24px; 
+    }
+    .burger-menu .follow-us{
       align-items: center;
+      margin-top: 30px;
     }
     
     .burger-menu_social-media-link-image {
