--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ a, body {
     height: 70px;
   }
   .burger-menu_nav {
-      padding: 110px 0px 0px 80px;
+      padding: 20px 0px 0px 80px;
       position: fixed;
       z-index: 20;
       display: flex;
@@ -179,8 +179,12 @@ a, body {
       flex-direction: column;
       align-items: center;
   }
-  .burger-menu {
+  .burger-menu_link {
+    font-size: 24px; 
+  }
+  .burger-menu .follow-us{
     align-items: center;
+    margin-top: 30px;
   }
   
   .burger-menu_social-media-link-image {
